--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 #File lists individuals who contributed content to this repository.
 
-Mary Kiige <mkiige77@gamil.com>
-Nick Gitobu <silvernicks9@gmail.com>
+
+David Nnadozie
+Ratshitimba Murendwa
